<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/emailRequest"
            android:layout_gravity="center"
            android:focusable="true">

        </EditText>
        <EditText
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwordRequest"
            android:layout_gravity="center"
            android:focusable="true">

        </EditText>
        <EditText
            android:id="@+id/editTextCheckPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/cPasswordRequest"
            android:inputType="textPassword"
            android:focusable="true">

        </EditText>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/buttonRegister"
            android:text="@string/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFD700"
            android:textColor="#000000"
            android:layout_gravity="center">
        </Button>
        <TextView
            android:textAlignment="center"
            android:text="@string/alreadySignedUp"
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:clickable="true">
        </TextView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>